--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,8 +1,20 @@
-  <table class="table table-bordered table-striped table-hover">
-    <tr *ngFor = "let product of products">
-      <td>{{product.productId}}</td>
-      <td>{{product.productName}}</td>
-      <td>{{product.categoryId}}</td>
-      <td>{{product.unitPrice}}</td>
-    </tr>
-  </table>
+<div *ngIf="dataLoaded==false" class="spinner-border text-success" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div>
+
+<table *ngIf="dataLoaded==true" class="table table-bordered table-striped table-hover">
+  <thead>
+    <th>Id</th>
+    <th>Ürün Adı</th>
+    <th>Kategori</th>
+    <th>Fiyat</th>
+    <th>Stok Adedi</th>
+  </thead>
+  <tr *ngFor="let product of products">
+    <td>{{ product.productId }}</td>
+    <td>{{ product.productName }}</td>
+    <td>{{ product.categoryId }}</td>
+    <td>{{ product.unitPrice }}</td>
+    <td>{{ product.unitsInStock }}</td>
+  </tr>
+</table>
