--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -2,19 +2,33 @@
   <span class="visually-hidden">Loading...</span>
 </div>
 
+<div class="mb-3">
+  <label for="filterText" class="form-label">Ürün Arama</label>
+  <input type="text" [(ngModel)]="filterText" class="form-control" id="filterText" placeholder="arama ifadesi giriniz">
+</div>
+<div *ngIf="filterText.length>2" class="alert alert-success"> 
+{{filterText}} aradınız!
+</div>
+
 <table *ngIf="dataLoaded==true" class="table table-bordered table-striped table-hover">
   <thead>
     <th>Id</th>
     <th>Ürün Adı</th>
     <th>Kategori</th>
     <th>Fiyat</th>
+    <th>KDV'li Fiyat</th>
     <th>Stok Adedi</th>
+    <th></th>
   </thead>
-  <tr *ngFor="let product of products">
-    <td>{{ product.productId }}</td>
-    <td>{{ product.productName }}</td>
-    <td>{{ product.categoryId }}</td>
-    <td>{{ product.unitPrice }}</td>
-    <td>{{ product.unitsInStock }}</td>
-  </tr>
+  <tbody>
+    <tr *ngFor="let product of products | filterPipe:filterText">
+      <td>{{ product.productId }}</td>
+      <td>{{ product.productName | uppercase}}</td>
+      <td>{{ product.categoryId }}</td>
+      <td>{{ product.unitPrice | currency}}</td>
+      <td>{{ product.unitPrice |vatAdded:18 | currency}}</td>
+      <td>{{ product.unitsInStock }}</td>
+      <td><button (click)="addToCart(product)" class="btn btn-success">Sepete Ekle</button></td>
+    </tr>
+  </tbody>
 </table>
